Make use of tags
- Creating tags listing, with all tags and count
- Dynamically create page for eacht tag with post listings
- Add tags to top of each post

--- a/_assets/stylesheets/_components.scss
+++ b/_assets/stylesheets/_components.scss
@@ -2,6 +2,7 @@
 @import 'components/navbar';
 @import 'components/footer';
 @import 'components/social';
-@import 'components/post';
 @import 'components/paginator';
 @import 'components/excerpt';
+@import 'components/tag';
+@import 'components/post';
