--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -3,7 +3,7 @@
     <img src="{{ 'jonathan.lehman91@gmail.com' | gravatar }}">
   </div>
   <a href="/" class="Navbar-link">Home</a>
-  <!-- <a href="#" class="Navbar-link">Talks</a> -->
+  <a href="/tags" class="Navbar-link">Tags</a>
 
   <div class="Navbar-social">
     {% include social.html %}
