--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>{% if page.title %}{{ site.title | append:" - " | append:page.title }}{% else %}{{ site.title }}{% endif %}</title>
+  <title>{% if page.title %}{{ page.title | append:" - " | append:site.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="canonical" href="{{page.url | replace:'index.html','' | prepend: site.url}}">
   <link rel="alternate" type="application/rss+xml" href="{{ site.url }}/feed.xml">
