Remove uneccessary @at-root
& handles this now (only would be needed with #{&}, which was the old
way of doing it)

--- a/_assets/stylesheets/helpers/_suit.scss
+++ b/_assets/stylesheets/helpers/_suit.scss
@@ -1,13 +1,13 @@
 // SUIT CSS descendant selector helper. Keeps CSS flat at root.
 @mixin jl-desc($names...) {
   @each $name in $names {
-    @at-root &-#{$name} { @content; }
+    &-#{$name} { @content; }
   }
 }
 
 // SUIT CSS modifier selector helper. Keeps CSS flat at root.
 @mixin jl-mod($names...) {
   @each $name in $names {
-    @at-root &--#{$name} { @content; }
+    &--#{$name} { @content; }
   }
 }
