--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,6 @@
 
   <article class="Site-footer-copyright">
     <div>Powered by <a href="http://jekyllrb.com">Jekyll</a> and <a href="http://disqus.com">Disqus</a>.</div>
-    <div>&copy; {{ site.time | date: "%Y" }} Jonathan Lehman. All rights reserved.</div>
-    <!-- <div>&copy; 2014-{{ site.time | date: "%Y" }} Jonathan Lehman. All rights reserved.</div> -->
+    <div>&copy; 2014-{{ site.time | date: "%Y" }} Jonathan Lehman. All rights reserved.</div>
   </article>
 </footer>
