--- a/_assets/stylesheets/helpers/_layouts.scss
+++ b/_assets/stylesheets/helpers/_layouts.scss
@@ -9,7 +9,7 @@ $susy: (
   gutters: 1/4,
   // debug: (image: show)
 );
-@include global-box-sizing(border-box); //TODO: [Susy 2.2], $inherit: true);
+@include global-box-sizing(border-box, $inherit: true);
 
 // layout properties
 $jl-layouts: (
