Add padding to content for readability
- Left and right padding of 1rem

--- a/_assets/stylesheets/_layout.scss
+++ b/_assets/stylesheets/_layout.scss
@@ -18,6 +18,7 @@
 
   // .Site-content
   @include jl-desc(content) {
+    padding: 0 1rem;
     @include span(full);
     @include jl-breakpoint(lg) {
       @include container(960px);
